--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "autoprefixer": "^10.4.12",
+    "ng2-search-filter": "^0.5.1",
     "postcss": "^8.4.18",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.1.8",
