--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
+    "@agm/js-marker-clusterer": "^1.1.0",
+    "@agm/snazzy-info-window": "^3.0.0-beta.0",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
-    "@angular/google-maps": "^14.2.5",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/googlemaps": "^3.43.3",
     "autoprefixer": "^10.4.12",
+    "js-marker-clusterer": "^1.0.0",
     "ng2-search-filter": "^0.5.1",
     "postcss": "^8.4.18",
     "rxjs": "~7.5.0",
